<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:backgroundTint="#000080"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="10dp"
    app:cardElevation="4dp"
    android:layout_margin="2dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000080">

        <LinearLayout
            android:id="@+id/idLL1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="5">

            <TextView
                android:id="@+id/itemName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:text="@string/item_name"
                android:padding="10dp"
                android:textSize="16sp"
                android:layout_margin="4dp"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/itemQuantity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:text="@string/quantity"
                android:textSize="15sp"
                android:padding="10dp"
                android:layout_margin="4dp"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/itemRate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:text="@string/rate"
                android:textSize="15sp"
                android:padding="10dp"
                android:layout_margin="4dp"
                android:textColor="@color/white"/>

            <ImageView
                android:id="@+id/delete"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:padding="4dp"
                android:layout_margin="5dp"
                android:src="@drawable/ic_delete"
                app:tint="@color/white"
                android:contentDescription="@string/deleteIcon_content_description"/>
        </LinearLayout>

        <TextView
            android:id="@+id/heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/idLL1"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="4dp"
            android:padding="10dp"
            android:text="@string/total_cost"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/total_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/idLL1"
            android:layout_margin="4dp"
            android:layout_alignParentEnd="true"
            android:padding="10dp"
            android:text="@string/amount"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold|italic"/>

    </RelativeLayout>
</com.google.android.material.card.MaterialCardView>