<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    app:elevation="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blue_shade">

        <TextView
            android:id="@+id/heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_items_to_cart"
            android:gravity="center"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="30sp"
            android:padding="4dp"
            android:layout_margin="5dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@id/heading"
            android:padding="10dp">


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxStrokeColor="@color/white"
                app:boxStrokeWidth="2dp"
                android:layout_margin="4dp"
                android:background="@color/background"
                app:hintTextColor="@color/white"
                android:textColorHint="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/item_na"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/item_name"
                    android:textColorHint="@color/white"
                    android:textSize="18sp"
                    android:paddingStart="10dp"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="@color/white"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    tools:ignore="RtlSymmetry" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxStrokeColor="@color/white"
                app:boxStrokeWidth="2dp"
                android:background="@color/background"
                android:layout_margin="4dp"
                app:hintTextColor="@color/white"
                android:textColorHint="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/item_quant"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/quantity"
                    android:textColorHint="@color/white"
                    android:textSize="18sp"
                    android:paddingStart="10dp"
                    android:inputType="number"
                    android:maxLines="1"
                    android:textColor="@color/white"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    tools:ignore="RtlSymmetry" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxStrokeColor="@color/white"
                app:boxStrokeWidth="2dp"
                android:background="@color/background"
                android:layout_margin="4dp"
                app:hintTextColor="@color/white"
                android:textColorHint="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/item_pri"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/price"
                    android:textColorHint="@color/white"
                    android:textSize="18sp"
                    android:paddingStart="10dp"
                    android:inputType="numberDecimal"
                    android:maxLines="1"
                    android:textColor="@color/white"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    tools:ignore="RtlSymmetry" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="5dp"
                android:weightSum="2">

                <Button
                    android:id="@+id/btn_cancel"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/cancel"
                    android:textAllCaps="false"
                    android:textSize="25sp"
                    android:layout_marginStart="5sp"
                    android:layout_marginEnd="5dp"
                    app:cornerRadius="20dp"
                    android:textColor="@color/black"
                    android:backgroundTint="@color/white"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/btn_add"
                    android:layout_width="0dp"
                    app:cornerRadius="20dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:layout_marginStart="5sp"
                    android:layout_marginEnd="5dp"
                    android:textAllCaps="false"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/add"
                    android:textSize="25sp"
                    android:textColor="@color/black"
                    android:backgroundTint="@color/white"
                    tools:ignore="ButtonStyle" />
            </LinearLayout>

        </LinearLayout>


    </RelativeLayout>

</com.google.android.material.card.MaterialCardView>